--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -18,7 +18,7 @@ task:
        - ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime
        - apt-get install -y tzdata
        - dpkg-reconfigure --frontend noninteractive tzdata
-       - sudo apt update -y && sudo apt install git aria2 curl ccache -y
+       - sudo apt update -y && sudo apt install git aria2 curl ccache tmate -y
        - ssh-keygen -t rsa -q -f "$HOME/.ssh/id_rsa" -N ""
   
   Tmate_script:
